RESOLVED FIXED170367
[Variation Fonts] Width values of GX fonts are not mapped correctly
https://bugs.webkit.org/show_bug.cgi?id=170367
Summary [Variation Fonts] Width values of GX fonts are not mapped correctly
Myles C. Maxfield
Reported 2017-03-31 16:53:13 PDT
[Variation Fonts] Width values of GX fonts are not mapped correctly
Attachments
Patch (4.85 KB, patch)
2017-03-31 16:55 PDT, Myles C. Maxfield
simon.fraser: review+
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-elcapitan (883.72 KB, application/zip)
2017-03-31 18:00 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-elcapitan (1.76 MB, application/zip)
2017-03-31 18:13 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (920.98 KB, application/zip)
2017-03-31 18:19 PDT, Build Bot
no flags
Patch for committing (6.39 KB, patch)
2017-04-03 22:54 PDT, Myles C. Maxfield
no flags
Patch for committing (6.63 KB, patch)
2017-04-07 17:41 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2017-03-31 16:55:04 PDT
Build Bot
Comment 2 2017-03-31 18:00:43 PDT
Comment on attachment 306027 [details] Patch Attachment 306027 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3452008 New failing tests: fast/css/font-face-locally-installed.html
Build Bot
Comment 3 2017-03-31 18:00:51 PDT
Created attachment 306033 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-03-31 18:13:13 PDT
Comment on attachment 306027 [details] Patch Attachment 306027 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3452027 New failing tests: fast/css/font-face-locally-installed.html
Build Bot
Comment 5 2017-03-31 18:13:14 PDT
Created attachment 306035 [details] Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-03-31 18:19:29 PDT
Comment on attachment 306027 [details] Patch Attachment 306027 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3452119 New failing tests: fast/css/font-face-locally-installed.html
Build Bot
Comment 7 2017-03-31 18:19:30 PDT
Created attachment 306036 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 8 2017-04-03 22:54:12 PDT
Created attachment 306165 [details] Patch for committing
Myles C. Maxfield
Comment 9 2017-04-07 17:41:35 PDT
Created attachment 306555 [details] Patch for committing
WebKit Commit Bot
Comment 10 2017-04-08 20:32:24 PDT
Comment on attachment 306555 [details] Patch for committing Clearing flags on attachment: 306555 Committed r215159: <http://trac.webkit.org/changeset/215159>
Note You need to log in before you can comment on or make changes to this bug.