[Variation Fonts] Width values of GX fonts are not mapped correctly https://bugs.webkit.org/show_bug.cgi?id=170367

Reviewed by Simon Fraser.

Source/WebCore:

For some reason, when I performed my calculations for how to map the 'wdth' axis of GX-style
variation fonts, I thought that font-stretch: 100% should map to a variation value of 0.0.
Instead, this should map to 1.0.

Test: fast/text/variations/gx-width.html

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::denormalizeSlope):
(WebCore::denormalizeVariationWidth):
(WebCore::normalizeVariationWidth):
(WebCore::normalizeWidth):
(WebCore::preparePlatformFont):
(WebCore::variationCapabilitiesForFontDescriptor):
(WebCore::denormalizeWidth): Deleted.

LayoutTests:

* fast/text/variations/font-selection-properties-expected.html:
* fast/text/variations/gx-width-expected.html: Added.
* fast/text/variations/gx-width.html: Added.


Canonical link: https://commits.webkit.org/187585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215159 268f45cc-cd09-0410-ab3c-d52691b4dbfc